<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_height"
        android:background="#45B0E4" >

        <ProgressBar
            android:id="@+id/prgressbar"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/back"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:scaleType="center"
            android:src="@drawable/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="扫码出库"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/jingxiaosang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="7dp"
        android:text="@string/jingxiaosang"
        android:textColor="#999999"
        android:textSize="11dp" />

    <TextView
        android:id="@+id/dingdanhao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="7dp"
        android:text="@string/dingdanhao"
        android:textColor="#999999"
        android:textSize="11dp" />

    <TextView
        android:id="@+id/dingdanleixing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="7dp"
        android:text="@string/dingdanleixing"
        android:textColor="#999999"
        android:textSize="11dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:background="#45B0E4"
        android:gravity="center"
        android:padding="6dp"
        android:text="零件明细"
        android:textColor="#FFFFFF"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="4dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:text="扫条码："
            android:textColor="#999999"
            android:textSize="11dp" />

        <EditText
            android:id="@+id/saotiaoma_result"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:background="@drawable/logininput"
            android:padding="5dp"
            android:text="请对准条形码扫描"
            android:textColor="#999999"
            android:textSize="11dp" />

        <TextView
            android:id="@+id/chaxun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:background="@drawable/choosebutton_default"
            android:padding="5dp"
            android:text="查询"
            android:textColor="#FFFFFF"
            android:textSize="15dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:background="#0197EC"
        android:orientation="vertical"
        android:paddingLeft="5dp"
        android:paddingRight="5dp" >

        <TextView
            android:id="@+id/waibudingdanhao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:text="@string/waibudingdanhao"
            android:textColor="#FFFFFF" />

        <View style="@style/line_horizontal" />

        <TextView
            android:id="@+id/tuhao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:text="@string/tuhao"
            android:textColor="#FFFFFF" />

        <View style="@style/line_horizontal" />

        <TextView
            android:id="@+id/lingjianzhongwenming"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:text="@string/lingjianzhongwenming"
            android:textColor="#FFFFFF" />

        <View style="@style/line_horizontal" />

        <TextView
            android:id="@+id/tiaoxingma"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:text="@string/tiaoxingma"
            android:textColor="#FFFFFF" />

        <View style="@style/line_horizontal" />

        <TextView
            android:id="@+id/shuliang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:text="@string/shuliang"
            android:textColor="#FFFFFF" />

        <View style="@style/line_horizontal" />

        <TextView
            android:id="@+id/cangwei"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:text="@string/cangwei"
            android:textColor="#FFFFFF" />

        <View style="@style/line_horizontal" />

        <TextView
            android:id="@+id/rukushijian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:text="@string/rukushijian"
            android:textColor="#FFFFFF" />

        <View style="@style/line_horizontal" />
    </LinearLayout>

</LinearLayout>